--- a/index.html
+++ b/index.html
@@ -62,36 +62,43 @@
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 				<li>
 					<div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
 					<h3>Jane Doe</h3>
+                    <div class="showhide"><a href="#">Show Info</a></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
 				</li>
 			</ul>
