--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="css/wide.css" media="all and (min-width:600px) and (min-device-width:600px), (min-width:600px) and (orientation:landscape)" rel="stylesheet" type="text/css" />
 	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/waypoints.min.js"></script>
+    <script src="js/waypoints-sticky.min.js"></script>
 	<script src="js/global.js"></script>
 </head>
 <body>
