no speaker bios, so remove the bio show/hide functionality

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <section id="intro">
         <div class="inner">
             <h2>Sharing Economy Conference: Boston</h2>
+            <img src="images/intro-circle.png" alt="Circle of people, all connected by arrows representing sharing">
             <p>Insert intro here.</p>
             <p>The placeholder image to the right will be replaced by something more appropriate.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
@@ -62,45 +63,48 @@
             <ul class="speakers">
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Emily Stapleton</h3>
+                    <p>Hubway General Manager</p>
                 </li>
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Bill Jacobsen</h3>
+                    <p>WorkBar Inc. CEO</p>
                 </li>
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Mike Brown</h3>
+                    <p>GearCommons.com Co-Founder</p>
                 </li>
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Nigel Jacob</h3>
+                    <p>City of Boston: Director of Emergent Technologies</p>
                 </li>
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Denise Cheng</h3>
+                    <p>MIT</p>
                 </li>
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Julian Agyeman</h3>
+                    <p>Tufts University</p>
                 </li>
                 <li>
                     <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
-                    <h3>Jane Doe</h3>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                    <h3>Shaun Paul</h3>
+                    <p>People and Planet Holdings CEO</p>
+                </li>
+                <li>
+                    <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
+                    <h3>Janelle Nanos</h3>
+                    <p>Boston Magazine</p>
+                </li>
+                <li>
+                    <div class="image-wrap"><img src="images/tmp.jpg" alt="Photo of speaker"></div>
+                    <h3>Juliet Schor</h3>
+                    <p>Boston College: Sociology Scholar</p>
                 </li>
             </ul>
         </div>
