add some sample topics and update sample content

--- a/index.html
+++ b/index.html
@@ -42,19 +42,35 @@
         <div class="inner">
             <h2>Sharing Economy Conference: Boston</h2>
             <img src="images/intro-circle.png" alt="Circle of people, all connected by arrows representing sharing">
-            <p>Insert intro here.</p>
-            <p>The placeholder image to the right will be replaced by something more appropriate.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+            <p>This conference will join leaders from business, investment, government, and Universities for a day to discuss the new economic model of sharing in Boston and beyond.</p>
+            <p>This collaborative approach introduces the idea that ownership and access are somewhat shared between corporations, start-ups, non-governmental organizations, and people.  This results in new products, services, and businesses that can combine resources to enable more access, knowledge, tools, and in the end, more productivity.</p>
+            <p>According to a recent report from Altimeter Group, an independent research firm based in San Mateo, California, the sharing economy is a $2 billion industry already with a project value of over $100 billion.</p>
         </div>
     </section>
     
     <section id="topics">
         <div class="inner">
             <h2>Topics</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+            <ul class="topics">
+                <li>
+                    <img src="images/topic-investing.png" alt="Investing">
+                    <p>Advising and Investing in the Sharing Economy</p>
+                </li>
+                <li>
+                    <img src="images/topic-sustainability.png" alt="Sustainability">
+                    <p>How does this fit into a sustainable future?</p>
+                </li>
+                <li>
+                    <img src="images/topic-law.png" alt="Law">
+                    <p>How will the legal scene address the intricacies of sharing?</p>
+                </li>
+                <li>
+                    <img src="images/topic-business.png" alt="Business">
+                    <p>Are any industries not yet involved that would benefit?</p>
+                </li>
+            </ul>
         </div>
+        <div class="clear"></div>
     </section>
     
     <section id="speakers">
