add sponsor text

--- a/index.html
+++ b/index.html
@@ -121,14 +121,20 @@
     <section id="sponsors">
         <div class="inner">
             <h2>Sponsors</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+            <p>Thanks to our sponsors for making this conference possible!</p>
             <div class="sponsor">
                 <img src="images/sponsor-mass-challenge.png" alt="MassChallenge">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                <p>Mass Challenge's mission is to catalyze a startup renaissance.  Their objectives:</p>
+                <ul>
+                    <li>Promote innovation, collaboration and commercialization</li>
+                    <li>Address the seed-stage investment gap, empowering novice entrepreneurs</li>
+                    <li>Provide educational opportunities for entrepreneurs</li>
+                    <li>Showcase entrepreneurship assets and infrastructure locally and nationally</li>
+                </ul>
             </div>
             <div class="sponsor">
                 <img src="images/sponsor-shareable.png" alt="Shareable">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+                <p>Shareable is a nonprofit news, action and connection hub for the sharing transformation.  Their mission is to empower everyone to share for a more joyous, resilient, and equitable world.</p>
             </div>
         </div>
         <div class="clear"></div>
