--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
     
     <footer>
         <div class="inner">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices eros nisi, sit amet euismod mauris varius quis. Proin mauris turpis, tincidunt a nisi ut, ullamcorper ultrices neque. Nulla gravida ipsum posuere, bibendum ipsum tincidunt, luctus eros. Suspendisse malesuada at enim eu venenatis.</p>
+            <p>Please join us.  This is a chance to learn, discuss, and network with entrepreneurs, advisors, investors, and professors all involved in the new sharing economy.</p>
+            <div class="twitter">
+                <a href="https://twitter.com/sharingBoston" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @sharingBoston</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+            </div>
         </div>
     </footer>
     
