add registration section

--- a/index.html
+++ b/index.html
@@ -140,9 +140,32 @@
         <div class="clear"></div>
     </section>
     
-    <footer>
+    <section id="registration">
         <div class="inner">
             <p>Please join us.  This is a chance to learn, discuss, and network with entrepreneurs, advisors, investors, and professors all involved in the new sharing economy.</p>
+            <div class="reg-info">
+                <div class="reg-corporate">
+                    <h2>Corporate</h2>
+                    <div class="reg-price">$30.00</div>
+                    <div class="reg-link"><a href="http://www.eventbrite.com/e/sharing-economy-conference-boston-tickets-8741324537">Register Now</a></div>
+                </div>
+                <div class="reg-student">
+                    <h2>Student</h2>
+                    <div class="reg-price">$20.00</div>
+                    <div class="reg-link"><a href="http://www.eventbrite.com/e/sharing-economy-conference-boston-tickets-8741324537">Register Now</a></div>
+                </div>
+                <div class="reg-early">
+                    <h2>Early Bird</h2>
+                    <div class="reg-price reg-ended">ENDED</div>
+                    <div class="reg-link"></div>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </section>
+    
+    <footer>
+        <div class="inner">
             <div class="twitter">
                 <a href="https://twitter.com/sharingBoston" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @sharingBoston</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
