style registration ended text

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                 </div>
                 <div class="reg-early">
                     <h2>Early Bird</h2>
-                    <div class="reg-price reg-ended">ENDED</div>
-                    <div class="reg-link"></div>
+                    <div class="reg-ended">ENDED</div>
                 </div>
             </div>
         </div>
