add registration images

--- a/index.html
+++ b/index.html
@@ -146,16 +146,19 @@
             <div class="reg-info">
                 <div class="reg-corporate">
                     <h2>Corporate</h2>
+                    <img src="images/reg-corporate.png" alt="Corporate">
                     <div class="reg-price">$30.00</div>
                     <div class="reg-link"><a href="http://www.eventbrite.com/e/sharing-economy-conference-boston-tickets-8741324537">Register Now</a></div>
                 </div>
                 <div class="reg-student">
                     <h2>Student</h2>
+                    <img src="images/reg-student.png" alt="Student">
                     <div class="reg-price">$20.00</div>
                     <div class="reg-link"><a href="http://www.eventbrite.com/e/sharing-economy-conference-boston-tickets-8741324537">Register Now</a></div>
                 </div>
                 <div class="reg-early">
                     <h2>Early Bird</h2>
+                    <img src="images/reg-early.png" alt="Early Bird">
                     <div class="reg-ended">ENDED</div>
                 </div>
             </div>
