update intro and topics content

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         <div class="inner">
             <h2>Sharing Economy Conference: Boston</h2>
             <img src="images/intro-circle.png" alt="Circle of people, all connected by arrows representing sharing">
-            <p>This conference will join leaders from business, investment, government, and Universities for a day to discuss the new economic model of sharing in Boston and beyond.</p>
-            <p>This collaborative approach introduces the idea that ownership and access are somewhat shared between corporations, start-ups, non-governmental organizations, and people.  This results in new products, services, and businesses that can combine resources to enable more access, knowledge, tools, and in the end, more productivity.</p>
-            <p>According to a recent report from Altimeter Group, an independent research firm based in San Mateo, California, the sharing economy is a $2 billion industry already with a project value of over $100 billion.</p>
+            <p>This conference introduces the idea that ownership and access are shared between corporations, start-ups, non-governmental organizations, and people. The Sharing Economy results in new products, services, and businesses that can combine resources to enable more access, knowledge, tools, and in the end, more productivity.</p>
+            <p>According to a recent report from Altimeter Group, an independent research firm, the sharing economy is a $2 billion industry already with a project value of over $100 billion.</p>
+            <p>The sharing economy includes a range of structures including for-profit, non-profit, barter and co-operative. The sharing economy enables expanded access to products, services and talent beyond one owner. Corporations, governments and individuals all actively participate as buyers, sellers, lenders or borrowers in these varied and evolving organizational structures. Shared offerings are based on a set of values that includes trust, transparency, economic empowerment, creative expression, authenticity, community resilience and human connection.</p>
+            <p>Join experts in business, law, policy, sociology, and environmental planning to discuss how the Sharing Economy can benefit the Boston community and beyond.</p>
         </div>
     </section>
     
@@ -54,19 +55,15 @@
             <ul class="topics">
                 <li>
                     <img src="images/topic-investing.png" alt="Investing">
-                    <p>Advising and Investing in the Sharing Economy</p>
+                    <p>Investing and Advising</p>
                 </li>
                 <li>
-                    <img src="images/topic-sustainability.png" alt="Sustainability">
-                    <p>How does this fit into a sustainable future?</p>
-                </li>
-                <li>
-                    <img src="images/topic-law.png" alt="Law">
-                    <p>How will the legal scene address the intricacies of sharing?</p>
+                    <img src="images/topic-future.png" alt="Future">
+                    <p>The Future Implications of the Sharing Economy</p>
                 </li>
                 <li>
                     <img src="images/topic-business.png" alt="Business">
-                    <p>Are any industries not yet involved that would benefit?</p>
+                    <p>Leading Business in the Sharing Economy</p>
                 </li>
             </ul>
         </div>
