add New Economy Coalition sponsor

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             <div class="sponsor">
                 <img src="images/sponsor-shareable.png" alt="Shareable">
             </div>
+            <div class="sponsor">
+                <img src="images/sponsor-new-economy-coalition.png" alt="New Economy Coalition">
+            </div>
         </div>
         <div class="clear"></div>
     </section>
