--- a/index.html
+++ b/index.html
@@ -138,13 +138,29 @@
             <h2>Sponsors</h2>
             <p>Thanks to our sponsors for making this conference possible!</p>
             <div class="sponsor">
-                <img src="images/sponsor-mass-challenge.png" alt="MassChallenge">
+                <a href="http://masschallenge.org/"><img src="images/sponsor-mass-challenge.png" alt="MassChallenge"></a>
+                <p>Mass Challenge's mission is to catalyze a startup renaissance.  Their objectives:</p>
+                <ul>
+                    <li>Promote innovation, collaboration and commercialization</li>
+                    <li>Address the seed-stage investment gap, empowering novice entrepreneurs</li>
+                    <li>Provide educational opportunities for entrepreneurs</li>
+                    <li>Showcase entrepreneurship assets and infrastructure locally and nationally</li>
+                </ul>
             </div>
             <div class="sponsor">
-                <img src="images/sponsor-shareable.png" alt="Shareable">
+                <a href="http://www.shareable.net/"><img src="images/sponsor-shareable.png" alt="Shareable"></a>
+                <p>Shareable is a nonprofit news, action and connection hub for the sharing transformation.  Their mission is to empower everyone to share for a more joyous, resilient, and equitable world.</p>
             </div>
             <div class="sponsor">
-                <img src="images/sponsor-new-economy-coalition.png" alt="New Economy Coalition">
+                <a href="http://neweconomy.net/"><img src="images/sponsor-new-economy-coalition.png" alt="New Economy Coalition"></a>
+                <p>The mission of the New Economy Coalition (NEC) is to convene and support all those who might contribute to an economy that is restorative to people, place, and planet, and that operates according to principles of democracy, justice and appropriate scale. Faced with interconnected ecological and economic crises, we believe that shared prosperity, sustainability and an equitable society require deep, systemic changes to both our economy and our politics. We support a just transition to a new economy that enables both thriving communities and ecological health.</p>
+            </div>
+            <div class="sponsor">
+                <a href="http://gearcommons.com/"><img src="images/sponsor-gearcommons.png" alt="GearCommons"></a>
+                <p>This is your chance to share your stoke for the outdoors with others. Just take a picture of your gear and upload it with a description. And oh yeah, you can make cash while doing it.  Don’t have the right gear? No problem. GearCommons is your gateway drug for outdoor adventure. Search the GearCommons community and rent the gear you need from your peers.</p>
+            </div>
+            <div class="sponsor">
+                <span class="name"><a href="http://www.cityofboston.gov/">City of Boston</a></span>
             </div>
         </div>
         <div class="clear"></div>
