--- a/index.html
+++ b/index.html
@@ -98,35 +98,43 @@
                 <li>
                     <h3>Julian Agyeman</h3>
                     <p class="affiliation">Tufts University</p>
+                    <div class="image-wrap"><img src="images/speaker-julian-agyeman.jpg" alt="Photo of Julian Agyeman"></div>
                     <div class="showhide"><a href="#">Show Info</a></div>
                     <p class="biography">Julian Agyeman is a Professor of Urban and Environmental Policy and Planning at Tufts University, Medford, MA. He is the originator of the concept of 'just sustainability', the full integration of social justice and sustainability, defined as 'the need to ensure a better quality of life for all, now and into the future, in a just and equitable manner, whilst living within the limits of supporting ecosystems.'</p>
                     <p class="biography">He is co-founder, and Editor-in-Chief of the international journal <a href="http://www.tandfonline.com/toc/cloe20/current">'Local Environment: The International Journal of Justice and Sustainability.'</a> With over 150 publications, his books include <a href="http://mitpress.mit.edu/catalog/item/default.asp?sid=82357132-6124-4A0C-AD52-6FCD53E32CBD&ttype=2&tid=9601">'Just Sustainabilities: Development in an Unequal World'</a> (MIT Press 2003); <a href="http://nyupress.org/books/book-details.aspx?bookid=9791">'Sustainable Communities and the Challenge of Environmental Justice'</a> (NYU Press 2005); <a href="http://mitpress.mit.edu/catalog/item/default.asp?ttype=2&tid=12534">'Environmental Inequalities Beyond Borders: Local Perspectives on Global Injustices'</a> (MIT Press 2011); <a href="http://mitpress.mit.edu/catalog/item/default.asp?ttype=2&tid=12695">'Cultivating Food Justice: Race, Class and Sustainability'</a> (MIT Press 2011); and 'Introducing Just Sustainabilities: Policy, Planning and Practice' (Zed Books 2013).</p>
                 </li>
                 <li>
-                    <h3>Emily Stapleton</h3>
-                    <p class="affiliation">Hubway General Manager</p>
+                    <h3>Nigel Jacob</h3>
+                    <p class="affiliation">City of Boston: Director of Emergent Technologies</p>
+                    <div class="image-wrap"><img src="images/speaker-nigel-jacob.jpg" alt="Photo of Nigel Jacob"></div>
                     <div class="showhide"><a href="#">Show Info</a></div>
-                </li>
-                <li>
-                    <h3>Bill Jacobsen</h3>
-                    <p class="affiliation">WorkBar Inc. CEO</p>
-                    <div class="showhide"><a href="#">Show Info</a></div>
+                    <p class="biography">With an extensive background in collaborative, citizen-facing technology projects, Nigel Jacob co-founded the Office of New Urban Mechanics - a civic innovation incubator within Boston's City Hall.  Nigel also serves as Mayor Menino's advisor on emerging technologies. In both of these roles, Nigel works to develop new models of innovation for cities in the 21st century.  Prior to joining the City of Boston in 2006, Nigel worked for and launched a series of technology start-ups in the Boston area.  Nigel is also a fellow at the Center for the Advancement Public Action at Bennington College. Nigel has received a number of awards for his ground breaking work in Boston, including being named a Public Official of the year in 2011 by Governing Magazine and the Tribeca Disruptive Innovation award for 2012.</p>
                 </li>
                 <li>
                     <h3>Shaun Paul</h3>
                     <p class="affiliation">People and Planet Holdings CEO</p>
                     <div class="showhide"><a href="#">Show Info</a></div>
-                </li>
-                <li>
-                    <h3>Nigel Jacob</h3>
-                    <p class="affiliation">City of Boston: Director of Emergent Technologies</p>
-                    <div class="showhide"><a href="#">Show Info</a></div>
+                    <p class="biography">Shaun Paul is the Managing Partner of People & Planet Holdings working with individual and institutional investors and donors to invest in growth companies to achieve competitive financial returns while building environmental and social resilience especially with Indigenous People. He is currently a partner with Good Capital in People and Planet Holdings, to invest in growth companies accelerating environmental and cultural resilience in the food, forests and energy sectors. He also provides selective advisory services to donors and investors while serving as a Research Fellow at the Global Development and Environment Institute at Tufts University. Shaun serves on the board of International Funders for Indigenous People, as well as a senior advisor to Accelerating Appalachia for nature-based companies and EcoMadera LLC in Ecuador. He received his bachelor's degree in International Development from the School of International Service at American University, and a master's degree in Development Economics from the University of Michigan.</p>
                 </li>
                 <li>
                     <h3>Mike Brown</h3>
                     <p class="affiliation">GearCommons.com Co-Founder</p>
                     <div class="showhide"><a href="#">Show Info</a></div>
                     <p class="biography">Mike Brown is a co-founder of <a href="http://www.gearcommons.com/">GearCommons</a>, a peer-to-peer website for renting outdoor gear.  He is also an alumnus of the global startup accelerator MassChallenge, a winner of the 2010 Tufts $100k Business Plan Competition, a successful crowdfunder on <a href="http://www.kickstarter.com/projects/alpinehammock/the-alpine-hammock">Kickstarter</a> and he is a blogger for <a href="http://www.shareable.net/users/young-and-urban">Shareable</a>, a leading online publication for the Sharing Economy.  He has degrees in Biomedical Engineering (B.S.) and Engineering Management (M.S.) from Tufts University.  You can find him on Twitter <a href="https://twitter.com/YoungandUrban">@YoungandUrban</a>.</p>
+                </li>
+                <li>
+                    <h3>Bill Jacobson</h3>
+                    <p class="affiliation">WorkBar Inc. CEO</p>
+                    <div class="image-wrap"><img src="images/speaker-bill-jacobson.jpg" alt="Photo of Bill Jacobson"></div>
+                    <div class="showhide"><a href="#">Show Info</a></div>
+                    <p class="biography">Bill has been active in Boston area startups since the mid nineties. Bill started Workbar -- Boston's first coworking space -- in 2009 as an experiment.  Will enough like-minded people come together to form a vibrant office community centered around access to Workbar's top-notch workspaces?  Years later Workbar has expanded, opened multiple locations and weaved its way into the fabric of Boston's startup, independent professional and broader business community.</p>
+                    <p class="biography">Bill began his career as a software engineer at MIT/Lincoln Laboratories after receiving an electrical engineering degree from the University of Michigan.</p>
+                    <p class="biography">Prior business include cofounding PickupZone, a package pickup service that in 2012 was acquired by ShopRunner.  Jumping back in the 90's, Bill cofounded a Boston based database-marketing company called InterStep, Inc.  Recognizing industry consolidation, Bill led InterStep through a series of acquisitions, leaving InterStep's investors with over 25 fold gains within five years.</p>
+                </li>
+                <li>
+                    <h3>Emily Stapleton</h3>
+                    <p class="affiliation">Hubway General Manager</p>
+                    <div class="showhide"><a href="#">Show Info</a></div>
                 </li>
             </ul>
         </div>
@@ -157,7 +165,7 @@
             </div>
             <div class="sponsor">
                 <a href="http://gearcommons.com/"><img src="images/sponsor-gearcommons.png" alt="GearCommons"></a>
-                <p>This is your chance to share your stoke for the outdoors with others. Just take a picture of your gear and upload it with a description. And oh yeah, you can make cash while doing it.  Don’t have the right gear? No problem. GearCommons is your gateway drug for outdoor adventure. Search the GearCommons community and rent the gear you need from your peers.</p>
+                <p>This is your chance to share your stoke for the outdoors with others. Just take a picture of your gear and upload it with a description. And oh yeah, you can make cash while doing it.  Don't have the right gear? No problem. GearCommons is your gateway drug for outdoor adventure. Search the GearCommons community and rent the gear you need from your peers.</p>
             </div>
             <div class="sponsor">
                 <span class="name"><a href="http://www.cityofboston.gov/">City of Boston</a></span>
