replace Nigel Jacob with Corey Zehngebot

--- a/index.html
+++ b/index.html
@@ -97,13 +97,6 @@
                     <p class="biography">Denise Cheng is a masters candidate in comparative media studies and teamster at both the MIT Center for Civic Media and Media Lab's MacroConnections. Denise researches how the peer economy affects economic independence for Americans and how to create a support infrastructure around the peer economy. Denise comes from the future of journalism world with extensive experience in participatory media and community building. In past lives, she worked with community media centers, news outlets and international development.</p>
                 </li>
                 <li>
-                    <div class="image-wrap"><img src="images/speaker-nigel-jacob.jpg" alt="Photo of Nigel Jacob"></div>
-                    <h3>Nigel Jacob</h3>
-                    <p class="affiliation">City of Boston: Director of Emergent Technologies</p>
-                    <div class="showhide"><a href="#">Show Info</a></div>
-                    <p class="biography">With an extensive background in collaborative, citizen-facing technology projects, Nigel Jacob co-founded the Office of New Urban Mechanics - a civic innovation incubator within Boston's City Hall.  Nigel also serves as Mayor Menino's advisor on emerging technologies. In both of these roles, Nigel works to develop new models of innovation for cities in the 21st century.  Prior to joining the City of Boston in 2006, Nigel worked for and launched a series of technology start-ups in the Boston area.  Nigel is also a fellow at the Center for the Advancement Public Action at Bennington College. Nigel has received a number of awards for his ground breaking work in Boston, including being named a Public Official of the year in 2011 by Governing Magazine and the Tribeca Disruptive Innovation award for 2012.</p>
-                </li>
-                <li>
                     <div class="image-wrap"><img src="images/speaker-bill-jacobson.jpg" alt="Photo of Bill Jacobson"></div>
                     <h3>Bill Jacobson</h3>
                     <p class="affiliation">WorkBar Inc. CEO</p>
@@ -138,6 +131,13 @@
                     <h3>Emily Stapleton</h3>
                     <p class="affiliation">Hubway General Manager</p>
                     <div class="showhide"><a href="#">Show Info</a></div>
+                </li>
+                <li>
+                    <div class="image-wrap"><img src="images/speaker-corey-zehngebot.jpg" alt="Photo of Corey Zehngebot"></div>
+                    <h3>Corey Zehngebot</h3>
+                    <p class="affiliation">City of Boston</p>
+                    <div class="showhide"><a href="#">Show Info</a></div>
+                    <p class="biography">Corey Zehngebot works as a Senior Urban Designer and Architect for the Boston Redevelopment Authority at the City of Boston. There she is responsible for leading, managing and participating in the formulation of urban design planning initiatives and design guidelines. Prior to working for the City, she was the project manager and lead designer for Boston's Complete Street Guidelines while working at Utile Architecture and Planning. She received a B.A. with distinction from Yale University, and a M.Arch. from Harvard Graduate School of Design. She lives in an 1867 rowhouse in Charlestown, is an active user and host of Airbnb, and loves commuting to work by ferry from the Navy Yard.</p>
                 </li>
             </ul>
         </div>
