--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             <h2>Topics</h2>
             <ul class="topics">
                 <li>
-                    <img src="images/topic-investing.png" alt="Investing">
-                    <p>Investing and Advising</p>
+                    <img src="images/topic-business.png" alt="Business">
+                    <p>Leading business in the sharing economy</p>
                 </li>
                 <li>
-                    <img src="images/topic-business.png" alt="Business">
-                    <p>Leading Business in the Sharing Economy</p>
+                    <img src="images/topic-Investing.png" alt="Investing">
+                    <p>Investing and advising in the sharing economy</p>
                 </li>
                 <li>
                     <img src="images/topic-future.png" alt="Future">
-                    <p>The Future Implications of the Sharing Economy</p>
+                    <p>The future implications of the sharing economy</p>
                 </li>
             </ul>
         </div>
