--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li>
                     <div class="image-wrap"><img src="images/speaker-bill-jacobson.jpg" alt="Photo of Bill Jacobson"></div>
                     <h3>Bill Jacobson</h3>
-                    <p class="affiliation">WorkBar Inc. CEO</p>
+                    <p class="affiliation">Workbar CEO</p>
                     <div class="showhide"><a href="#">Show Info</a></div>
                     <p class="biography">Bill has been active in Boston area startups since the mid nineties. Bill started Workbar -- Boston's first coworking space -- in 2009 as an experiment.  Will enough like-minded people come together to form a vibrant office community centered around access to Workbar's top-notch workspaces?  Years later Workbar has expanded, opened multiple locations and weaved its way into the fabric of Boston's startup, independent professional and broader business community.</p>
                     <p class="biography">Bill began his career as a software engineer at MIT/Lincoln Laboratories after receiving an electrical engineering degree from the University of Michigan.</p>
