fix filename capitalization typo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p>Leading business in the sharing economy</p>
                 </li>
                 <li>
-                    <img src="images/topic-Investing.png" alt="Investing">
+                    <img src="images/topic-investing.png" alt="Investing">
                     <p>Investing and advising in the sharing economy</p>
                 </li>
                 <li>
